Estimate pull quota costs (#111)
* Remove obsolete fetch endpoint.
* Refactor config properties.
* Add backend API to quote the cost of a pull request.
* Validate the estimated cost of pull requests.
* Fix height-fit style for WebKit.
* Show request validation errors in UI for pull comments batch.
